--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Hello, world!</h1>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card template" style="width: 18rem;">
         <!--<img class="card-img-top" src="..." alt="Card image cap">-->
         <div class="card-body">
           <h5 class="card-title">Card Title</h5>
@@ -21,9 +21,23 @@
         </div>
     </div>
 
+    <script src="projectData.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script>
+      $(document).ready(function() {
+        $.each(projectData, function(i, v) {
+          var card = $('.template').clone();
+
+          card.removeClass('template');
+          card.find('.card-title').text(v.title);
+
+          $('body').append(card);
+        });
+      });
+    </script>
   </body>
 </html>
